--- a/packages/trace-admin/package.json
+++ b/packages/trace-admin/package.json
@@ -7,7 +7,10 @@
     "dev": "echo \"implement dev script\"",
     "build": "echo \"implement build script\""
   },
-  "keywords": ["admin", "dashboard"],
+  "keywords": [
+    "admin",
+    "dashboard"
+  ],
   "author": "",
   "license": "ISC"
 }
