--- a/packages/trace-sdk/package.json
+++ b/packages/trace-sdk/package.json
@@ -7,7 +7,10 @@
     "dev": "echo \"implement dev script\"",
     "build": "echo \"implement build script\""
   },
-  "keywords": ["sdk", "tracking"],
+  "keywords": [
+    "sdk",
+    "tracking"
+  ],
   "author": "",
   "license": "ISC"
 }
