--- a/packages/trace-server/package.json
+++ b/packages/trace-server/package.json
@@ -7,7 +7,10 @@
     "dev": "echo \"implement dev script\"",
     "build": "echo \"implement build script\""
   },
-  "keywords": ["server", "backend"],
+  "keywords": [
+    "server",
+    "backend"
+  ],
   "author": "",
   "license": "ISC"
 }
