--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "husky install",
     "lint": "eslint './packages/**/src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint './packages/**/src/**/*.{js,jsx,ts,tsx}' --fix",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,yml,yaml}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,yml,yaml}\"",
+    "test": "echo \"No test specified\""
   },
   "keywords": [
     "monitoring",
