--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 100,
   "tabWidth": 2,
+  "useTabs": false,
+  "printWidth": 180,
+  "singleQuote": true,
+  "semi": true,
+  "trailingComma": "all",
+  "arrowParens": "avoid",
+  "proseWrap": "preserve",
   "endOfLine": "lf"
 }
