--- a/packages/trace-admin/package.json
+++ b/packages/trace-admin/package.json
@@ -1,20 +1,28 @@
 {
   "name": "trace-admin",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode development",
-    "test": "cross-env NODE_ENV=test webpack-dev-server --mode production",
-    "build": "cross-env NODE_ENV=prod webpack-dev-server --mode production",
-    "lint": "eslint ."
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "type-check": "tsc --noEmit",
+    "test": "test"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "@ant-design/charts": "^2.2.6",
     "@ant-design/icons": "^5.6.1",
+    "@babel/runtime-corejs3": "^7.26.9",
     "@reduxjs/toolkit": "^2.6.0",
+    "@types/antd": "^1.0.4",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
+    "babel-loader": "^10.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -46,17 +54,16 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.6.3",
+    "less-loader": "^12.2.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.5",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
-    "typescript": "~5.7.3",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "webpack": "^5.89.0",
+    "typescript": "^5.8.2",
+    "webpack": "^5.98.0",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "4.15.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
