--- a/packages/trace-sdk/tsconfig.json
+++ b/packages/trace-sdk/tsconfig.json
@@ -110,7 +110,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["web/src/**/*", "web/examples/**/*", "web/src/plugins/**/*", "src/**/*", "packages/**/*"],
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules" // 排除 node_modules 目录
   ]
