--- a/packages/trace-admin/package.json
+++ b/packages/trace-admin/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
@@ -30,6 +31,8 @@
     "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.9",
     "@babel/plugin-transform-arrow-functions": "^7.25.9",
     "@babel/plugin-transform-block-scoping": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
