feat:初步新增页面信息采集功能

--- a/packages/trace-sdk/package.json
+++ b/packages/trace-sdk/package.json
@@ -4,7 +4,7 @@
   "description": "TraceFlow SDK for client-side tracking",
   "main": "index.js",
   "scripts": {
-    "dev": "echo \"implement dev script\"",
+    "dev": "tsx src/plugins/event-tracking/text.ts",
     "format": "prettier --write .",
     "build": "rollup -c"
   },
@@ -20,6 +20,8 @@
     "@rollup/plugin-terser": "^0.4.4",
     "rollup": "^4.34.9",
     "rollup-plugin-typescript2": "^0.36.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
   "type": "module"
