--- a/packages/trace-sdk/package.json
+++ b/packages/trace-sdk/package.json
@@ -22,5 +22,8 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.8.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "puppeteer": "^24.3.1"
+  }
 }
