--- a/packages/trace-sdk/package.json
+++ b/packages/trace-sdk/package.json
@@ -24,6 +24,7 @@
   },
   "type": "module",
   "dependencies": {
-    "puppeteer": "^24.3.1"
+    "puppeteer": "^24.3.1",
+    "web-vitals": "^4.2.4"
   }
 }
