feat:新增性能分析页面

--- a/packages/trace-admin/tsconfig.json
+++ b/packages/trace-admin/tsconfig.json
@@ -10,7 +10,9 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"]
 }
