--- a/packages/trace-admin/package.json
+++ b/packages/trace-admin/package.json
@@ -8,7 +8,8 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "type-check": "tsc --noEmit",
-    "test": "test"
+    "test": "test",
+    "server": "json-server --watch db.json --port 8081"
   },
   "keywords": [],
   "author": "",
@@ -20,10 +21,13 @@
     "@babel/runtime-corejs3": "^7.26.9",
     "@reduxjs/toolkit": "^2.6.0",
     "@types/antd": "^1.0.4",
+    "@types/echarts": "^5.0.0",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.3",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -40,6 +44,7 @@
     "@craco/craco": "^7.1.0",
     "@eslint/js": "^9.21.0",
     "@types/antd": "^1.0.4",
+    "@types/echarts": "^5.0.0",
     "@types/node": "^22.13.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -57,6 +62,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.6.3",
+    "json-server": "1.0.0-beta.3",
     "less-loader": "^12.2.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
