--- a/packages/trace-admin/package.json
+++ b/packages/trace-admin/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-react": "^7.26.3",
     "@craco/craco": "^7.1.0",
     "@eslint/js": "^9.21.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@types/antd": "^1.0.4",
     "@types/echarts": "^5.0.0",
     "@types/node": "^22.13.8",
@@ -60,6 +61,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.6.3",
     "json-server": "1.0.0-beta.3",
@@ -67,6 +69,7 @@
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.1.5",
+    "react-refresh": "^0.16.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
