--- a/packages/trace-sdk/package.json
+++ b/packages/trace-sdk/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "axios": "^1.8.1",
     "puppeteer": "^24.3.1",
+    "tslib": "^2.8.1",
     "web-vitals": "^4.2.4"
   }
 }
