--- a/packages/trace-sdk/package.json
+++ b/packages/trace-sdk/package.json
@@ -18,6 +18,8 @@
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "rollup": "^4.34.9",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-polyfill-node": "^0.13.0",
@@ -31,6 +33,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "axios": "^1.8.1",
     "puppeteer": "^24.3.1",
+    "react": "^19.0.0",
     "tslib": "^2.8.1",
     "web-vitals": "^4.2.4"
   }
