--- a/packages/trace-server/config/production.env
+++ b/packages/trace-server/config/production.env
@@ -2,14 +2,10 @@
 PORT=3000
 HOST=0.0.0.0
 
-# 数据库配置
-DB_TYPE=postgres
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=your_db_user
-DB_PASSWORD=your_db_password
-DB_DATABASE=traceflow
-DB_SCHEMA=public
+# MongoDB配置
+MONGODB_URI=mongodb://localhost:27017/traceflow
+MONGODB_USER=your_mongo_user
+MONGODB_PASSWORD=your_mongo_password
 
 # JWT配置
 JWT_SECRET=your_jwt_secret
