--- a/packages/trace-server/package.json
+++ b/packages/trace-server/package.json
@@ -32,6 +32,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongodb": "^6.14.2",
