feat: 🎸 部署上线、调整数据库和鉴权相关配置

--- a/packages/trace-server/config/development.env
+++ b/packages/trace-server/config/development.env
@@ -1,9 +1,10 @@
 # 服务器配置
 PORT=3000
-HOST=localhost
+HOST=47.122.48.232
 
 # MongoDB配置
-MONGODB_URI=mongodb://localhost:27017/traceflow_dev
+# 使用 MongoDB Atlas 免费集群（将数据库访问限制为本地测试）
+MONGODB_URI=mongodb+srv://demo:Password123@cluster0.eoqrjtj.mongodb.net/traceflow_dev
 MONGODB_USER=
 MONGODB_PASSWORD=
 
