--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
-    "tslib": "^2.8.1"
+    "mongodb": "5.8.0",
+    "mongoose": "7.4.0",
+    "tslib": "^2.8.1",
+    "typeorm": "0.3.17"
   }
 }
