--- a/packages/trace-server/package.json
+++ b/packages/trace-server/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "NODE_OPTIONS=\"--require=./scripts/setup.js\" nest start",
+    "start:dev": "NODE_OPTIONS=\"--require=./scripts/setup.js\" nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -37,6 +37,7 @@
     "class-validator": "^0.14.1",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.0",
+    "mysql2": "^3.14.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
