--- a/packages/trace-admin/package.json
+++ b/packages/trace-admin/package.json
@@ -22,10 +22,11 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@types/antd": "^1.0.4",
     "@types/echarts": "^5.0.0",
-    "antd": "^5.24.2",
+    "antd": "^5.24.3",
     "axios": "^1.8.1",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
+    "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.3",
     "moment": "^2.30.1",
