--- a/packages/trace-sdk/package.json
+++ b/packages/trace-sdk/package.json
@@ -2,11 +2,17 @@
   "name": "@traceflow/sdk",
   "version": "1.1.0",
   "description": "TraceFlow SDK for client-side tracking",
-  "main": "index.js",
+  "main": "dist/trace-sdk.cjs.js",
+  "module": "dist/trace-sdk.esm.js",
+  "browser": "dist/trace-sdk.umd.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "tsx src/plugins/event-tracking/text.ts",
     "format": "prettier --write .",
     "build": "rollup -c",
+    "build:sdk": "rollup -c rollup.config.sdk.js",
+    "build:prod": "NODE_ENV=production rollup -c rollup.config.sdk.js",
+    "build:test": "npm run build:sdk && node server.js",
     "publish": "npm publish --access public"
   },
   "keywords": [
