fix: 🐛 移除平台模块无用代码

--- a/packages/trace-admin/tsconfig.json
+++ b/packages/trace-admin/tsconfig.json
@@ -7,9 +7,9 @@
     "moduleResolution": "node",
     "target": "ES6",
     "lib": ["DOM", "ESNext"],
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["src/*"]
     },
     "skipLibCheck": true,
     "resolveJsonModule": true
