--- a/packages/trace-admin/package.json
+++ b/packages/trace-admin/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production",
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "build": "cross-env NODE_ENV=production webpack",
     "type-check": "tsc --noEmit",
     "test": "test",
     "server": "json-server --watch ./src/data/db.json --port 8081"
@@ -61,6 +61,8 @@
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "esbuild": "^0.25.4",
+    "esbuild-loader": "^4.3.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
