--- a/packages/trace-sdk/.gitignore
+++ b/packages/trace-sdk/.gitignore
@@ -1,28 +1,30 @@
-# Dependency directories
-node_modules/
+# Build output
+/dist
+/build
 
-# Build outputs
-dist/
+# Dependencies
+/node_modules
 
-# TypeScript compiled files in source directories
-src/**/*.js
-src/**/*.js.map
-src/**/*.d.ts
+# Logs
+/logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
 
-# Editor directories and files
-.idea/
-.vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Test coverage
+/coverage
+/.nyc_output
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db 
+# IDE
+/.idea
+/.vscode
+*.sublime-workspace
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# Cache
+*.tsbuildinfo
+.eslintcache
