--- a/packages/trace-admin/package.json
+++ b/packages/trace-admin/package.json
@@ -70,6 +70,7 @@
     "globals": "^15.15.0",
     "html-webpack-plugin": "^5.6.3",
     "json-server": "1.0.0-beta.3",
+    "less": "^4.3.0",
     "less-loader": "^12.2.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
@@ -77,6 +78,7 @@
     "react-refresh": "^0.16.0",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "webpack": "^5.98.0",
     "webpack-bundle-analyzer": "^4.10.2",
